# shl-assessment-recommender-agent

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml
embeddings/: build_index.py
embeddings/faiss_index/: index.faiss  index.pkl
services/: agent.py  comparer.py  llm.py  retriever.py  router.py
tests/: test_agent.py  test_comparer.py  test_java_personality.py  test_llm.py  test_personality.py  test_retriever.py
