[project]
name = "shl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.49.0",
]
